# EncraSafe

./: README.md  docker-compose.yml  pyproject.toml
db-scripts/: create-tables.sql
encrasafe/service/: secret_service.py
local_secret_manager/database/: __init__.py  db_models.py
src/service/: secret_service.py
