[tool.poetry]
name = "encrasafe"
version = "0.1.0"
description = "A simple local secrets manager"
authors = ["Rahul Kumar <rahulbit10180@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
